src/style.css
@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap");

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding: 0;
  height: 100vh;
  box-sizing: border-box;
}

:root {
  --main: #495e57;
  --second: #f4ce14;
  --third: #edefee;
  --fourth: #333333;
  --fifth: #ee9972;
  --fontMain: "Markazi Text", sans-serif;
  --fontSec: "Karla", sans-serif;
}

::-webkit-scrollbar {
  width: 10px;
  background: transparent;
}

::-webkit-scrollbar-thumb {
  background: var(--second);
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
}

.container {
  margin: 0 auto;
  padding: var(--mainPadding) 20px;
}

@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}

@media (min-width: 990px) {
  .container {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

.visible-f {
  display: flex !important;
}

.hidden {
  display: none !important;
}

/*                 Header               */
.header {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.header .container {
  display: flex;
  justify-content: space-between;
  padding-top: 10px;
  padding-bottom: 10px;
  position: relative;
}

.header .container a {
  display: flex;
}

.header .container a img {
  max-width: 100%;
}

.header menu {
  list-style: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1em;
}

.header menu li {
  position: relative;
}

.header menu li a {
  color: black;
  text-decoration: none;
  font-family: var(--fontSec);
  font-weight: 600;
  transition: 0.3s;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -ms-transition: 0.3s;
  -o-transition: 0.3s;
  position: relative;
}

.header menu li a:visited {
  color: black;
}

.header menu li::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 3px;
  background-color: var(--second);
  bottom: -26px;
  left: 0;
  display: none;
}

.header menu li:hover::after {
  display: block;
}

.header nav i {
  display: none;
}

@media (max-width: 690px) {
  .header .container {
    padding: 10px 20px;
  }
  .header nav i {
    top: 10px;
    right: 20px;
    font-size: 30px;
    color: var(--main);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    z-index: 2;
  }
  .header nav menu {
    position: fixed;
    display: none;
    top: 0;
    right: 0;
    margin: 0;
    flex-direction: column;
    justify-content: center;
    gap: 0;
    background-color: var(--main);
    width: 100%;
    height: 100%;
    padding: 0;
    z-index: 1;
  }

  .header nav menu li {
    padding: 50px 0;
    width: 100%;
    text-align: center;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
  }

  .header nav menu li:hover {
    background-color: white;
  }
  .header nav menu li:hover a {
    color: black !important;
  }
  .header nav menu li a {
    color: white;
    font-size: 24px;
  }
  .header nav menu li a:visited {
    color: white;
  }

  .header menu li::after {
    left: 0;
    bottom: 0;
    height: 5px;
    width: 100%;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
  }
}

/*                 Hero Section               */
.hero-section {
  background-color: var(--main);
  color: white;
  padding: 20px 0;
}

.hero-section article {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10em;
}
.hero-section article .img {
  height: 330px;
  width: 310px;
  overflow: hidden;
  border-radius: 16px;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  -ms-border-radius: 16px;
  -o-border-radius: 16px;
}
.hero-section article img {
  width: 100%;
}

.hero-section article div h1 {
  font-family: var(--fontMain);
  font-size: 64px;
  font-weight: 500;
  color: var(--second);
  margin: 0;
}

.hero-section article div h2 {
  font-family: var(--fontMain);
  font-size: 40px;
  font-weight: 500;
  margin: -20px 0 10px 0;
}

.hero-section article div p {
  font-family: "Karla", sans-serif;
  font-size: 18px;
  margin: 0 0 40px 0;
  max-width: 20em;
}

.hero-section article div a {
  background-color: var(--second);
  color: black;
  font-family: var(--fontSec);
  font-weight: 700;
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 16px;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  -ms-border-radius: 16px;
  -o-border-radius: 16px;
}

.hero-section article div:visited {
  color: black;
}

@media (max-width: 830px) {
  .hero-section article {
    padding: 10px 30px;
  }
  .hero-section article .img {
    display: none;
  }
}

@media (max-width: 360px) {
  .hero-section article div h1 {
    font-size: 3em;
  }
  .hero-section article div h2 {
    font-size: 2em;
    margin-top: -15px;
  }
}
/*              Specials              */
.specials article {
  display: flex;
  flex-direction: column;
  padding-top: 5em;
}

.specials article > div {
  margin-bottom: 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.specials article > div h2 {
  font-family: var(--fontMain);
  font-size: 64px;
  font-weight: 600;
  margin: 0;
}
.specials article > div > a {
  background-color: var(--second);
  color: black;
  font-family: var(--fontSec);
  font-weight: 700;
  font-size: 20px;
  text-decoration: none;
  padding: 18px 50px;
  border-radius: 16px;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  -ms-border-radius: 16px;
  -o-border-radius: 16px;
}

.specials article > div:nth-child(2) {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 24px;
  padding: 0 20px;
}
/* ... */

